--- a/index.css
+++ b/index.css
@@ -15,6 +15,7 @@ a{
   width:100%;
 }
 header.container {
+  border-bottom:2px grey solid;
   justify-content:space-between;
 }
 #banner-name {
@@ -27,7 +28,9 @@ header.container {
   top:35%;
   margin-left:auto;
   margin-right:auto;
-  align-content: center;
+  max-width:800px;
+  flex-direction: column;
+  
 }
 .container {
   display:flex;
@@ -50,4 +53,36 @@ span.score,
   position: relative;
   top:125%;
   
+}
+fieldset{
+  display: flex;
+  justify-items: center;
+  border:1px grey solid;
+  border-radius:8px;
+  background-color:lightblue;
+}
+.question-section{
+  width:100%;
+  display: flex;
+  flex-direction: column;
+}
+.question{
+  font-size: 50px;
+}
+
+.answer-option{
+margin:10px;
+}
+.answerOptionText{
+  font-size: 35px;
+  position: relative;
+  left:25%;
+}
+
+.submitBtn{
+  margin-left:auto;
+  margin-right: auto;
+  border-radius:5px;
+  width:500px;
+  height:75px;
 }
